--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "restore": "node ./src/restore.js"
   },
   "dependencies": {
+    "@slack/web-api": "^6.4.0",
     "archiver": "~5.3.0",
     "aws-sdk": "~2.548.0",
     "dayjs": "~1.10.7"
