--- a/.github/workflows/build-backup-restore-runner.yml
+++ b/.github/workflows/build-backup-restore-runner.yml
@@ -1,7 +1,7 @@
 name: Build Commit
 on: [push]
 jobs:
-  build-backup-restore-runner:
+  build:
     runs-on: ubuntu-20.04
     steps:
       - name: Change user
@@ -34,7 +34,7 @@ jobs:
 
       - name: Create release info
         run: |
-          echo "${{ steps.current-time.outputs.year }}.${{ steps.current-time.outputs.month }}.${{ steps.current-time.outputs.day }}.$GITHUB_RUN_NUMBER" > ./release.txt
+          echo "${{ steps.current-time.outputs.year }}.${{ steps.current-time.outputs.month }}.${{ steps.current-time.outputs.day }}.$GITHUB_RUN_NUMBER" > release.txt
 
       - name: Upload workspace
         uses: actions/upload-artifact@v2
@@ -47,9 +47,9 @@ jobs:
             package-lock.json
             release.txt
 
-  deploy-release:
+  push:
     runs-on: ubuntu-20.04
-    needs: [build-backup-restore-runner]
+    needs: [build]
     if: github.ref == 'refs/heads/main'
     env:
       DOCKER_IMAGE: educandu/backup-restore-runner
