--- a/.github/workflows/build-backup-restore-runner.yml
+++ b/.github/workflows/build-backup-restore-runner.yml
@@ -57,7 +57,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
       - name: Set RELEASE_NUMBER
-        run: echo "RELEASE_NUMBER="$(cat ./release.txt | tr -d '\n')"" >> $GITHUB_ENV
+        run: echo "RELEASE_NUMBER="$(cat release.txt | tr -d '\n')"" >> $GITHUB_ENV
       - name: Create release notes
         run: echo "RELEASE_NOTES=$(echo $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/commit/$GITHUB_SHA)" >> $GITHUB_ENV
       - name: Login to DockerHub
