--- a/.github/workflows/build-backup-restore-runner.yml
+++ b/.github/workflows/build-backup-restore-runner.yml
@@ -34,12 +34,12 @@ jobs:
 
       - name: Create release info
         run: |
-          echo "${{ steps.current-time.outputs.year }}.${{ steps.current-time.outputs.month }}.${{ steps.current-time.outputs.day }}.$GITHUB_RUN_NUMBER" > release.txt
+          echo "${{ steps.current-time.outputs.year }}.${{ steps.current-time.outputs.month }}.${{ steps.current-time.outputs.day }}.$GITHUB_RUN_NUMBER" > ./release.txt
 
       - name: Upload workspace
         uses: actions/upload-artifact@v2
         with:
-          name: image-contents
+          name: dist
           path: |
             src
             Dockerfile
@@ -57,7 +57,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
       - name: Set RELEASE_NUMBER
-        run: echo "RELEASE_NUMBER="$(cat release.txt | tr -d '\n')"" >> $GITHUB_ENV
+        run: echo "RELEASE_NUMBER="$(cat ./dist/release.txt | tr -d '\n')"" >> $GITHUB_ENV
       - name: Create release notes
         run: echo "RELEASE_NOTES=$(echo $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/commit/$GITHUB_SHA)" >> $GITHUB_ENV
       - name: Login to DockerHub
