EDU-21 Add tag 'latest' to docker image

--- a/.github/workflows/build-backup-restore-runner.yml
+++ b/.github/workflows/build-backup-restore-runner.yml
@@ -71,4 +71,4 @@ jobs:
         with:
           push: true
           context: .
-          tags: ${{ env.DOCKER_IMAGE }}:${{ env.RELEASE_NUMBER }}
+          tags: ${{ env.DOCKER_IMAGE }}:${{ env.RELEASE_NUMBER }} ${{ env.DOCKER_IMAGE }}:latest
