--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
   "private": true,
   "scripts": {
     "lint": "eslint src --ext .js",
-    "backup": "node ./src/backup.js",
-    "restore": "node ./src/restore.js"
+    "backup": "node ./src/index.js backup",
+    "restore": "node ./src/index.js restore"
   },
   "dependencies": {
     "archiver": "~5.3.0",
     "aws-sdk": "~2.548.0",
     "dayjs": "~1.10.7",
-    "superagent": "^6.1.0"
+    "superagent": "~6.1.0"
   },
   "devDependencies": {
-    "eslint": "^8.1.0",
-    "eslint-plugin-import": "^2.25.2"
+    "eslint": "~8.1.0",
+    "eslint-plugin-import": "~2.25.2"
   }
 }
