--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "archiver": "~5.3.0",
     "aws-sdk": "~2.548.0",
     "dayjs": "~1.10.7",
+    "node-graceful": "~3.1.0",
     "superagent": "~6.1.0"
   },
   "devDependencies": {
