--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "private": true,
   "scripts": {
     "lint": "eslint src --ext .js",
-    "test": "jest --testPathPattern='/src/*'",
+    "test": "jest",
     "backup": "node ./src/index.js backup",
     "restore": "node ./src/index.js restore"
   },
