--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "connection-string": "~4.3.4",
     "connection-string-parser": "~1.0.4",
     "dayjs": "~1.10.7",
+    "mime": "~3.0.0",
     "node-graceful": "~3.1.0",
     "superagent": "~6.1.0"
   },
