--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,41 +1,24 @@
-name: Build Commit
-on: [push]
+name: Publish
+on:
+  push:
+    branches:
+      - 'main'
 jobs:
   build:
     runs-on: ubuntu-20.04
+    env:
+      NODE_ENV: development
     steps:
       - name: Change user
         run: sudo chown -R $USER:$USER ${{ github.workspace }}
-
-      - uses: actions/checkout@v2
-
-      - name: Cache node modules
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Lint
-        run: npm run lint
-
+      - name: Checkout code
+        uses: actions/checkout@v2
       - name: Get current time
         uses: 1466587594/get-current-time@v2
         id: current-time
-
       - name: Create release info
         run: |
           echo "${{ steps.current-time.outputs.year }}.${{ steps.current-time.outputs.month }}.${{ steps.current-time.outputs.day }}.$GITHUB_RUN_NUMBER" > ./release.txt
-
       - name: Upload workspace
         uses: actions/upload-artifact@v2
         with:
@@ -46,16 +29,18 @@ jobs:
             package.json
             package-lock.json
             release.txt
-
   push:
     runs-on: ubuntu-20.04
+    env:
+      NODE_ENV: development
     needs: [build]
-    if: github.ref == 'refs/heads/main'
     env:
       DOCKER_IMAGE: educandu/backup-restore-runner
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/download-artifact@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Download artifacts
+        uses: actions/download-artifact@v2
       - name: Set RELEASE_NUMBER
         run: echo "RELEASE_NUMBER="$(cat ./dist/release.txt | tr -d '\n')"" >> $GITHUB_ENV
       - name: Create release notes
