--- a/package.json
+++ b/package.json
@@ -18,26 +18,25 @@
     "url": "https://github.com/educandu/backup-restore-runner"
   },
   "dependencies": {
-    "archiver": "~5.3.1",
-    "aws-sdk": "~2.1277.0",
-    "axios": "^1.2.1",
-    "connection-string": "~4.3.6",
+    "archiver": "~6.0.1",
+    "aws-sdk": "~2.1510.0",
+    "axios": "^1.6.2",
+    "connection-string": "~4.4.0",
     "connection-string-parser": "~1.0.4",
-    "dayjs": "~1.11.7",
-    "mime": "~3.0.0",
+    "dayjs": "~1.11.10",
+    "mime": "~4.0.0",
     "node-graceful": "~3.1.0"
   },
   "devDependencies": {
-    "@educandu/dev-tools": "~8.0.0",
-    "@educandu/eslint-config": "~2.2.1",
-    "@vitest/coverage-c8": "~0.25.8",
-    "del": "~7.0.0",
-    "eslint": "~8.30.0",
-    "eslint-plugin-import": "~2.27.4",
-    "eslint-plugin-react": "~7.32.0",
+    "@educandu/dev-tools": "~11.1.0",
+    "@vitest/coverage-v8": "~0.34.6",
+    "del": "~7.1.0",
+    "eslint": "~8.55.0",
+    "eslint-plugin-import": "~2.29.0",
+    "eslint-plugin-react": "~7.33.2",
     "eslint-plugin-react-hooks": "~4.6.0",
     "gulp": "~4.0.2",
-    "sinon": "~15.0.1",
-    "vitest": "~0.25.8"
+    "sinon": "~17.0.1",
+    "vitest": "~0.34.6"
   }
 }
