--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "url": "https://github.com/educandu/backup-restore-runner"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "~3.465.0",
     "archiver": "~6.0.1",
-    "aws-sdk": "~2.1510.0",
     "axios": "^1.6.2",
     "connection-string": "~4.4.0",
     "connection-string-parser": "~1.0.4",
