--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "url": "https://github.com/educandu/backup-restore-runner"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "~3.465.0",
+    "@aws-sdk/client-s3": "~3.468.0",
+    "@aws-sdk/lib-storage": "~3.468.0",
     "archiver": "~6.0.1",
     "axios": "^1.6.2",
     "connection-string": "~4.4.0",
